rxcpp をサブモジュールとして追加

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ enable_testing()
 
 add_executable(rxcpp_test main.cpp)
 
+set(CMAKE_CXX_FLAGS "-std=c++14")
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
+
+include_directories(./rxcpp/Rx/v2/src)
